Post added controls